--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <link rel="stylesheet" href="style.css">
+  <title>Home work part.1</title>
 </head>
 
 <body>
   <div class="container">
-    <header>
+    <header class="general-header padding-site">
       <h1>Product name</h1>
       <nav>
 
@@ -21,18 +22,16 @@
       </nav>
       <figure class="header-img">
         <img src="#" alt="header-img">
-      </figure>
-    </header>
+      </figure></header>
     <main>
-      <section class="about-product">
+      <section class="about-product padding-site">
         <h2>About your product</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
         <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
         <figure class="about-img">
           <img src="#" alt="about img">
-        </figure>
-      </section>
-      <section class="pluses">
+        </figure></section>
+      <section class="pluses padding-site">
         <h2>Dignity and pluses product</h2>
         <ul>
           <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
