fixed some bugs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <figure class="about-img">
           <img src="#" alt="about img">
         </figure></section>
-      <section class="pluses padding-site">
+      <section class="pluses padding-site clearfix">
         <h2>Dignity and pluses product</h2>
         <ul>
           <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
