write some code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       </nav>
       <figure class="header-img">
         <img src="#" alt="header-img">
-      </figure></header>
+      </figure>
+    </header>
     <main>
       <section class="about-product padding-site">
         <h2>About your product</h2>
@@ -30,7 +31,8 @@
         <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
         <figure class="about-img">
           <img src="#" alt="about img">
-        </figure></section>
+        </figure>
+      </section>
       <section class="pluses padding-site clearfix">
         <h2>Dignity and pluses product</h2>
         <ul>
@@ -42,29 +44,48 @@
           <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
         </ul>
       </section>
-      <article class="scrinshots">
+      <section class="scrinshots padding-site clearfix">
         <h1>Scrinshots</h1>
-        <section>
-          <h3>The description for the image</h3>
-          <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-          <img src="" alt="">
-        </section>
-        <section>
-          <h3>The description for the image</h3>
-          <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-          <img src="" alt="">
-        </section>
-        <section>
-          <h3>The description for the image</h3>
-          <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-          <img src="" alt="">
-        </section>
-        <section>
-          <h3>The description for the image</h3>
-          <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-          <img src="" alt="">
-        </section>
-      </article>
+        <article>
+          <img src="#" alt="scrin-img">
+          <h2>The description for the image</h2>
+          <p class="scrin-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+
+        </article>
+        <article>
+          <img src="#" alt="scrin-img">
+          <h2>The description for the image</h2>
+          <p class="scrin-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+
+        </article>
+        <article>
+          <img src="#" alt="scrin-img">
+          <h2>The description for the image</h2>
+          <p class="scrin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+        </article>
+        <article>
+          <img src="#" alt="scrin-img">
+          <h2>The description for the image</h2>
+          <p class="scrin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
+          </p>
+
+        </article>
+      </section>
+      <section class="reviews padding-site clearfix">
+        <h2>Reviews</h2>
+        <div><img src="#" alt="img-comments">
+          <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+        </div>
+        <div><img src="#" alt="img-comments">
+          <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+        </div>
+        <div><img src="#" alt="img-comments">
+          <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+        </div>
+        <div><img src="#" alt="img-comments">
+          <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+        </div>
+      </section>
     </main>
     <footer>
 
