write more some text after work

--- a/index.html
+++ b/index.html
@@ -74,16 +74,32 @@
       <section class="reviews padding-site clearfix">
         <h2>Reviews</h2>
         <div class="comment-box"><img src="#" alt="img-comments">
-          <p class="reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+          <div class="reviews-text">
+            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+            </p>
+            <span>Lourens S.</span>
+          </div>
         </div>
         <div class="comment-box"><img src="#" alt="img-comments">
-          <p class="reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+          <div class="reviews-text">
+            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
+              consectetur?</p>
+              <span>Lourens S.</span>
+          </div>
         </div>
         <div class="comment-box"><img src="#" alt="img-comments">
-          <p class="reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+          <div class="reviews-text">
+            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+            </p>
+            <span>Lourens S.</span>
+          </div>
         </div>
         <div class="comment-box"><img src="#" alt="img-comments">
-          <p class="reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+          <div class="reviews-text">
+            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+            </p>
+            <span>Lourens S.</span>
+          </div>
         </div>
       </section>
     </main>
