write some code again

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <h2>Reviews</h2>
         <div class="comment-box"><img src="#" alt="img-comments">
           <div class="reviews-text">
-            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
+              consectetur?
             </p>
             <span>Lourens S.</span>
           </div>
@@ -84,23 +85,76 @@
           <div class="reviews-text">
             <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
               consectetur?</p>
-              <span>Lourens S.</span>
+            <span>Lourens S.</span>
           </div>
         </div>
         <div class="comment-box"><img src="#" alt="img-comments">
           <div class="reviews-text">
-            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
+              consectetur?
             </p>
             <span>Lourens S.</span>
           </div>
         </div>
         <div class="comment-box"><img src="#" alt="img-comments">
           <div class="reviews-text">
-            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+            <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
+              consectetur?
             </p>
             <span>Lourens S.</span>
           </div>
         </div>
+      </section>
+      <section class="buy-it padding-site">
+        <h2>Buy it now</h2>
+        <div class="flex-section">
+
+        <div class="small-buy-it">
+          <h2>Standart</h2>
+          <div class="cost-panel"><p class="cost">$100</p></div>
+          <ol>
+            <li>Porro officia cumque sint deleniti; </li>
+            <li>Тemo facere rem vitae odit;</li>
+            <li>Cum odio, iste quia doloribus autem;</li>
+            <li>Aperiam nulla ea neque.</li>
+          </ol>
+          <a href="#">buy</a>
+        </div>
+        <div class="midle-buy-it">
+          <h2>Premium</h2>
+          <div class="cost-panel"><p class="cost">$150</p></div>
+          <ol>
+            <li>Porro officia cumque sint deleniti; </li>
+            <li>Тemo facere rem vitae odit;</li>
+            <li>Cum odio, iste quia doloribus autem;</li>
+            <li>Aperiam nulla ea neque.</li>
+            <li>Porro officia cumque sint deleniti;</li>
+            <li>Тemo facere rem vitae odit;</li>
+            <li>Cum odio, iste quia doloribus autem;</li>
+            <li>Aperiam nulla ea neque.</li>
+          </ol>
+          <a href="#">buy</a>
+        </div>
+        <div class="large-buy-it">
+          <h2>Lux</h2>
+          <div class="cost-panel"><p class="cost">$200</p></div>
+          <ol>
+            <li>Porro officia cumque sint deleniti; </li>
+            <li>Тemo facere rem vitae odit;</li>
+            <li>Cum odio, iste quia doloribus autem;</li>
+            <li>Aperiam nulla ea neque.</li>
+            <li>Porro officia cumque sint deleniti;</li>
+            <li>Тemo facere rem vitae odit;</li>
+            <li>Cum odio, iste quia doloribus autem;</li>
+            <li>Aperiam nulla ea neque.</li>
+            <li>Porro officia cumque sint deleniti;</li>
+            <li>Тemo facere rem vitae odit;</li>
+            <li>Cum odio, iste quia doloribus autem; </li>
+            <li>Aperiam nulla ea neque.</li>
+          </ol>
+          <a href="#">buy</a>
+        </div>
+      </div>
       </section>
     </main>
     <footer>
