last push before lesson #3

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
       </nav>
       <figure class="header-img">
-        <img src="#" alt="header-img">
+        <img src="img/fon.jpg" alt="header-img">
       </figure>
     </header>
     <main>
@@ -30,7 +30,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
         <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
         <figure class="about-img">
-          <img src="#" alt="about img">
+          <img src="img/fon.jpg" alt="about img">
         </figure>
       </section>
       <section class="pluses padding-site clearfix">
@@ -47,24 +47,24 @@
       <section class="scrinshots padding-site clearfix">
         <h1>Scrinshots</h1>
         <article>
-          <img src="#" alt="scrin-img">
+          <img src="img/fon.jpg" alt="scrin-img">
           <h2>The description for the image</h2>
           <p class="scrin-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
 
         </article>
         <article>
-          <img src="#" alt="scrin-img">
+          <img src="img/fon.jpg" alt="scrin-img">
           <h2>The description for the image</h2>
           <p class="scrin-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
 
         </article>
         <article>
-          <img src="#" alt="scrin-img">
+          <img src="img/fon.jpg" alt="scrin-img">
           <h2>The description for the image</h2>
           <p class="scrin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
         </article>
         <article>
-          <img src="#" alt="scrin-img">
+          <img src="img/fon.jpg" alt="scrin-img">
           <h2>The description for the image</h2>
           <p class="scrin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
           </p>
@@ -73,7 +73,7 @@
       </section>
       <section class="reviews padding-site clearfix">
         <h2>Reviews</h2>
-        <div class="comment-box"><img src="#" alt="img-comments">
+        <div class="comment-box"><img src="img/fon.jpg" alt="img-comments">
           <div class="reviews-text">
             <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
               consectetur?
@@ -81,14 +81,14 @@
             <span>Lourens S.</span>
           </div>
         </div>
-        <div class="comment-box"><img src="#" alt="img-comments">
+        <div class="comment-box"><img src="img/fon.jpg" alt="img-comments">
           <div class="reviews-text">
             <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
               consectetur?</p>
             <span>Lourens S.</span>
           </div>
         </div>
-        <div class="comment-box"><img src="#" alt="img-comments">
+        <div class="comment-box"><img src="img/fon.jpg" alt="img-comments">
           <div class="reviews-text">
             <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
               consectetur?
@@ -96,7 +96,7 @@
             <span>Lourens S.</span>
           </div>
         </div>
-        <div class="comment-box"><img src="#" alt="img-comments">
+        <div class="comment-box"><img src="img/fon.jpg" alt="img-comments">
           <div class="reviews-text">
             <p class="">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehen&shy;derit. Libero doloribus, possimus officiis sapiente necessitatibus commodi
               consectetur?
@@ -109,57 +109,87 @@
         <h2>Buy it now</h2>
         <div class="flex-section">
 
-        <div class="small-buy-it">
-          <h2>Standart</h2>
-          <div class="cost-panel"><p class="cost">$100</p></div>
-          <ol>
-            <li>Porro officia cumque sint deleniti; </li>
-            <li>Тemo facere rem vitae odit;</li>
-            <li>Cum odio, iste quia doloribus autem;</li>
-            <li>Aperiam nulla ea neque.</li>
-          </ol>
-          <a href="#">buy</a>
+          <div class="small-buy-it">
+            <h2>Standart</h2>
+            <div class="cost-panel">
+              <p class="cost">$100</p>
+            </div>
+            <ol>
+              <li>Porro officia cumque sint deleniti; </li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+            </ol>
+            <a href="#">buy</a>
+          </div>
+          <div class="midle-buy-it">
+            <h2>Premium</h2>
+            <div class="cost-panel">
+              <p class="cost">$150</p>
+            </div>
+            <ol>
+              <li>Porro officia cumque sint deleniti; </li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+            </ol>
+            <a href="#">buy</a>
+          </div>
+          <div class="large-buy-it">
+            <h2>Lux</h2>
+            <div class="cost-panel">
+              <p class="cost">$200</p>
+            </div>
+            <ol>
+              <li>Porro officia cumque sint deleniti; </li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem; </li>
+              <li>Aperiam nulla ea neque.</li>
+            </ol>
+            <a href="#">buy</a>
+          </div>
         </div>
-        <div class="midle-buy-it">
-          <h2>Premium</h2>
-          <div class="cost-panel"><p class="cost">$150</p></div>
-          <ol>
-            <li>Porro officia cumque sint deleniti; </li>
-            <li>Тemo facere rem vitae odit;</li>
-            <li>Cum odio, iste quia doloribus autem;</li>
-            <li>Aperiam nulla ea neque.</li>
-            <li>Porro officia cumque sint deleniti;</li>
-            <li>Тemo facere rem vitae odit;</li>
-            <li>Cum odio, iste quia doloribus autem;</li>
-            <li>Aperiam nulla ea neque.</li>
-          </ol>
-          <a href="#">buy</a>
-        </div>
-        <div class="large-buy-it">
-          <h2>Lux</h2>
-          <div class="cost-panel"><p class="cost">$200</p></div>
-          <ol>
-            <li>Porro officia cumque sint deleniti; </li>
-            <li>Тemo facere rem vitae odit;</li>
-            <li>Cum odio, iste quia doloribus autem;</li>
-            <li>Aperiam nulla ea neque.</li>
-            <li>Porro officia cumque sint deleniti;</li>
-            <li>Тemo facere rem vitae odit;</li>
-            <li>Cum odio, iste quia doloribus autem;</li>
-            <li>Aperiam nulla ea neque.</li>
-            <li>Porro officia cumque sint deleniti;</li>
-            <li>Тemo facere rem vitae odit;</li>
-            <li>Cum odio, iste quia doloribus autem; </li>
-            <li>Aperiam nulla ea neque.</li>
-          </ol>
-          <a href="#">buy</a>
-        </div>
-      </div>
       </section>
     </main>
-    <footer>
-
+    <footer class="general-footer padding-site clearfix">
+      <h2>Contacts</h2>
+      <form class="back-feed" action="index.html" method="post">
+        <input type="text" name="name" placeholder="Your name:">
+        <input type="email" name="email" value="" placeholder="Your email:">
+        <textarea name="message" rows="" cols="" placeholder="Your message:"></textarea>
+        <input type="button" name="send" value="send">
+      </form>
+      <div class="contact-me">
+        <ul>
+          <li><a class="contact" href="#">here_your_login_skype</a></li>
+          <li><a class="contact" href="#">279679659</a></li>
+          <li><a class="contact" href="#">psdhtmlcss@mail.ru</a></li>
+          <li><a class="contact" href="#">80 00 4568 55 55</a></li>
+        </ul>
+      </div>
+      <div class="social-me">
+        <a class="tweet" href="#"></a>
+        <a class="fb" href="#"></a>
+        <a class="in" href="#"></a>
+        <a class="gplus" href="#"></a>
+        <a class="yt" href="#"></a>
+      </div>
     </footer>
+    <div class="copyright">
+      <p>Copyright &#9400; 2014 Product name - PSD HTML CSS</p>
+    </div>
   </div>
 </body>
 
