fix bugs after w3c validation

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </ul>
       </section>
       <section class="scrinshots padding-site clearfix">
-        <h1>Scrinshots</h1>
+        <h2 class="scrin-h">Scrinshots</h2>
         <article>
           <img src="img/fon.jpg" alt="scrin-img">
           <h2>The description for the image</h2>
@@ -168,7 +168,7 @@
       <form class="back-feed" action="index.html" method="post">
         <input type="text" name="name" placeholder="Your name:">
         <input type="email" name="email" value="" placeholder="Your email:">
-        <textarea name="message" rows="" cols="" placeholder="Your message:"></textarea>
+        <textarea name="message" rows="1" cols="1" placeholder="Your message:"></textarea>
         <input type="button" name="send" value="send">
       </form>
       <div class="contact-me">
